added background image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,12 @@
 .App {
   text-align: center;
 }
-
+body {
+  background: url(./assets/bgApp.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  backdrop-filter: blur(3px);
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
